# ASE_Animator

./: CMakeLists.txt  LICENSE  README.md
GLInterface/: Asciitok.h  GLInterface.cpp  GLInterface.h  SOIL.lib  cAnimation.cpp  cAnimation.h  cAseLoader.cpp  cAseLoader.h  cFrame.cpp  cFrame.h  cGrid.cpp  cGrid.h  cMtlTex.cpp  cMtlTex.h  cPyramid.cpp  cPyramid.h  cQuat.cpp  cQuat.h  cRay.cpp  cRay.h  cSphere.cpp  cSphere.h  cTextureManager.cpp  cTextureManager.h  keyManager.cpp  keyManager.h  stdafx.h
MFCFrame/: CG_Animation.aps  CG_Animation.cpp  CG_Animation.h  CG_Animation.rc  CG_AnimationDoc.cpp  CG_AnimationDoc.h  CG_AnimationView.cpp  CG_AnimationView.h  ChildFrm.cpp  ChildFrm.h  CoolDialogBar.cpp  CoolDialogBar.h  MainFrm.cpp  MainFrm.h  MainProcessDlg.cpp  MainProcessDlg.h  ReadMe.txt  resource.h  stdafx.cpp
MFCFrame/res/: CG_Animation.rc2
soil/projects/VC9/: UpgradeLog.htm
soil/projects/VC9/Debug/: SOIL.idb
soil/projects/VC9/Debug/SOIL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SOIL.lastbuildstate  lib.command.1.tlog
